simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(com.sun.jna.ptr.PointerByReference, int, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer)} and {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(Pointer target, int index, DoubleByReference charge, DoubleByReference radius, DoubleByReference scalingFactor);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(PointerByReference target, int index, DoubleBuffer charge, DoubleBuffer radius, DoubleBuffer scalingFactor);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(const OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double*, double*, double*)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_getParticleParameters(PointerByReference target, int index, DoubleByReference charge, DoubleByReference radius, DoubleByReference scalingFactor);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(com.sun.jna.ptr.PointerByReference, int, double, double, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(Pointer target, int index, double charge, double radius, double scalingFactor);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(OpenMM_AmoebaGeneralizedKirkwoodForce*, int, double, double, double)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setParticleParameters(PointerByReference target, int index, double charge, double radius, double scalingFactor);
	/**
	 * Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getSolventDielectric(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(Pointer target, double dielectric);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setSolventDielectric(PointerByReference target, double dielectric);
	/**
	 * Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getSoluteDielectric(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(Pointer target, double dielectric);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setSoluteDielectric(PointerByReference target, double dielectric);
	/**
	 * Original signature : <code>int OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	int OpenMM_AmoebaGeneralizedKirkwoodForce_getIncludeCavityTerm(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(OpenMM_AmoebaGeneralizedKirkwoodForce*, int)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(Pointer target, int includeCavityTerm);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(OpenMM_AmoebaGeneralizedKirkwoodForce*, int)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setIncludeCavityTerm(PointerByReference target, int includeCavityTerm);
	/**
	 * Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getProbeRadius(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(Pointer target, double probeRadius);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setProbeRadius(PointerByReference target, double probeRadius);
	/**
	 * Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	double OpenMM_AmoebaGeneralizedKirkwoodForce_getSurfaceAreaFactor(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(Pointer target, double surfaceAreaFactor);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(OpenMM_AmoebaGeneralizedKirkwoodForce*, double)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_setSurfaceAreaFactor(PointerByReference target, double surfaceAreaFactor);
	/**
	 * Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(OpenMM_AmoebaGeneralizedKirkwoodForce*, OpenMM_Context*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(Pointer target, Pointer context);
	/** Original signature : <code>void OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(OpenMM_AmoebaGeneralizedKirkwoodForce*, OpenMM_Context*)</code> */
	void OpenMM_AmoebaGeneralizedKirkwoodForce_updateParametersInContext(PointerByReference target, PointerByReference context);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(Pointer target);
	/** Original signature : <code>OpenMM_Boolean OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaGeneralizedKirkwoodForce*)</code> */
	int OpenMM_AmoebaGeneralizedKirkwoodForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * AmoebaInPlaneAngleForce<br>
	 * Original signature : <code>OpenMM_AmoebaInPlaneAngleForce* OpenMM_AmoebaInPlaneAngleForce_create()</code>
	 */
	PointerByReference OpenMM_AmoebaInPlaneAngleForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_destroy(OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_destroy(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaInPlaneAngleForce_destroy(Pointer target);
	/** Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_destroy(OpenMM_AmoebaInPlaneAngleForce*)</code> */
	void OpenMM_AmoebaInPlaneAngleForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaInPlaneAngleForce_getNumAngles(const OpenMM_AmoebaInPlaneAngleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaInPlaneAngleForce_getNumAngles(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaInPlaneAngleForce_getNumAngles(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaInPlaneAngleForce_getNumAngles(const OpenMM_AmoebaInPlaneAngleForce*)</code> */
	int OpenMM_AmoebaInPlaneAngleForce_getNumAngles(PointerByReference target);
